# ofdpdfsigner

./: LICENSE  README.md  README_en.md  README_zh.md
DocReader/: CMakeLists.txt  anno_button.cpp  anno_button.h  custom_signstamp_keyword_dialog.cpp  custom_signstamp_keyword_dialog.h  custom_signstamp_pos_dialog.cpp  custom_signstamp_pos_dialog.h  custom_signstamp_riding_dialog.cpp  custom_signstamp_riding_dialog.h  fontaddthread.cpp  fontaddthread.h  iteminfo.h  main.cpp  mainres.qrc  mainwidget.cpp  mainwidget.h  mainwidget.ui  mymessagebox.cpp  mymessagebox.h  myprogressbox.cpp  myprogressbox.h  mytabbar.cpp  mytabbar.h  ofdpdfsignerproxy.cpp  ofdpdfsignerproxy.h  signstamp_custom.cpp  signstamp_custom.h  stamp_button.cpp  stamp_button.h  stampwidget.cpp  stampwidget.h  tabbutton.cpp  tabbutton.h  tool_anno.cpp  tool_anno.h  tool_attachment.cpp  tool_attachment.h  tool_smallpic.cpp  tool_smallpic.h  tool_stamp.cpp  (+14 more)
DocReader/res/: CustomWindow.css
HarmonyOS/: mupdf_Makerules_HarmonyOS  readme.txt
HarmonyOS/ofdpdfsigner/: local.properties  oh-package.json5
HarmonyOS/ofdpdfsigner/AppScope/: app.json5
HarmonyOS/ofdpdfsigner/entry/: oh-package.json5
HarmonyOS/ofdpdfsigner/oh_modules/@ohos/: hypium
android/ofdpdfsigner/: local.properties  settings.gradle
android/ofdpdfsigner/app/: build.gradle
android/ofdpdfsigner/gradle/wrapper/: gradle-wrapper.properties
ios/ofdpdfsigner_ios/ofdpdfsigner_ios/: ContentView.swift  ofdpdfsigner_iosApp.swift
ios/ofdpdfsigner_ios/ofdpdfsigner_ios.xcodeproj/: project.pbxproj
ios/ofdpdfsigner_ios/ofdpdfsigner_iosTests/: ofdpdfsigner_iosTests.swift
ios/ofdpdfsigner_ios/ofdpdfsigner_iosUITests/: ofdpdfsigner_iosUITests.swift  ofdpdfsigner_iosUITestsLaunchTests.swift
ios/ofdpdfsigner_ios/ofdpdfsignerlib/: Crypto.swift  FontManager.swift  OFD.swift  OFDConverter.swift  OFDStamp.swift  PDF.swift  PDFConverter.swift  PDFStamp.swift  SealManager.swift  SystemMamager.swift  WaterMark.swift  ofdpdfsignerlib.h
ios/ofdpdfsigner_ios/ofdpdfsignerlib/ofdpdfsignerlib.docc/: ofdpdfsignerlib.md
ios/ofdpdfsigner_ios/ofdpdfsignerlib/util/: Color.swift  EncryptData.swift  Key.swift  KeyPair.swift  PageSize.swift  TextParams.swift  Utils.swift  WaterMarkImage.swift
ios/ofdpdfsigner_ios/ofdpdfsignerlibTests/: ofdpdfsignerlibTests.swift
java/ofdpdfsigner_jni/: pom.xml
ofdpdfsigner/ofdpdfsigner/: KeyWordPosInfo.json  dllmain.cpp  pch.h
ofdpdfsigner/ofdpdfsigner/basic/: FZZAtomicInteger.cpp  FZZAtomicInteger.h  FZZBytes.cpp  FZZBytes.h  FZZConst.cpp  FZZConst.h  FZZMatrix.cpp  FZZMatrix.h  FZZOFDFilesContainer.cpp  FZZOFDFilesContainer.h  FZZObject.cpp  FZZObject.h  FZZPath.cpp  FZZPath.h  FZZString.cpp  FZZString.h  FZZStringItem.cpp  FZZStringItem.h  FZZZipTracks.cpp  FZZZipTracks.h  log.h  tinyxml2.cpp  tinyxml2.h  uuid.h
ofdpdfsigner/ofdpdfsigner/converter/image/: FZZOFDToImage.cpp  FZZOFDToImage.h  FZZPDFToImage.cpp  FZZPDFToImage.h
ofdpdfsigner/ofdpdfsigner/converter/toofd/: FZZOFDDevice.cpp  FZZOFDDevice.h  FZZPDF2OFD.cpp  FZZPDF2OFD.h
ofdpdfsigner/ofdpdfsigner/converter/topdf/: FZZOFDToPDF.cpp  FZZOFDToPDF.h
ofdpdfsigner/ofdpdfsigner/converter/tosvg/: FZZOFDToSvg.cpp  FZZOFDToSvg.h  FZZPDF2SVG.cpp  FZZPDF2SVG.h  FZZSVGDevice.cpp  FZZSVGDevice.h
ofdpdfsigner/ofdpdfsigner/converter/utils/: FZZCommonUtil.cpp  FZZCommonUtil.h  FZZImageUtil.cpp  FZZImageUtil.h  FZZSVGUtil.cpp  FZZSVGUtil.h  FZZWaterMark.cpp  FZZWaterMark.h
ofdpdfsigner/ofdpdfsigner/font/: FZZGenFont.cpp  FZZGenFont.h
ofdpdfsigner/ofdpdfsigner/fzfont/: FZZFontCache.cpp  FZZFontCache.h  FZZFontConfig.cpp  FZZFontConfig.h  FZZSystemFontCache.cpp  FZZSystemFontCache.h  FZZSystemFontList.cpp  FZZSystemFontList.h  FZZTempFontCache.cpp  FZZTempFontCache.h  FZZTempFontList.cpp  FZZTempFontList.h
ofdpdfsigner/ofdpdfsigner/gm/crypto/: FZZCert.cpp  FZZCert.h  FZZCertGenerator.cpp  FZZCertGenerator.h  FZZGMCrypto.cpp  FZZGMCrypto.h  FZZKey.cpp  FZZKey.h  FZZKeyPair.cpp  FZZKeyPair.h
ofdpdfsigner/ofdpdfsigner/interface/: FZZCInterface.cpp  FZZCInterface.h  FZZErrorCode.h  FZZJNIInterface.cpp  FZZJNIInterface.h  FZZKeyWordRule.cpp  FZZKeyWordRule.h
ofdpdfsigner/ofdpdfsigner/ofd/: FZZOFD.cpp  FZZOFD.h  FZZOFDConst.cpp  FZZOFDConst.h  FZZOFDEncrypt.cpp  FZZOFDEncrypt.h  FZZOFDObject.cpp  FZZOFDObject.h  FZZOFDProtectSign.cpp  FZZOFDProtectSign.h  FZZOFDSignCleaner.cpp  FZZOFDSignCleaner.h  FZZOFDSigner.cpp  FZZOFDSigner.h  FZZOFDValidator.cpp  FZZOFDValidator.h  FZZOFDXMLElementObject.cpp  FZZOFDXMLElementObject.h  FZZOFDXMLFileObject.cpp  FZZOFDXMLFileObject.h
ofdpdfsigner/ofdpdfsigner/ofd/container/: FZZOFDAnnotsDir.cpp  FZZOFDAnnotsDir.h  FZZOFDAttachsDir.cpp  FZZOFDAttachsDir.h  FZZOFDBaseDir.cpp  FZZOFDBaseDir.h  FZZOFDDir.cpp  FZZOFDDir.h  FZZOFDDocDir.cpp  FZZOFDDocDir.h  FZZOFDPageDir.cpp  FZZOFDPageDir.h  FZZOFDResDir.cpp  FZZOFDResDir.h  FZZOFDSignDir.cpp  FZZOFDSignDir.h  FZZOFDSignsDir.cpp  FZZOFDSignsDir.h  FZZOFDTagsDir.cpp  FZZOFDTagsDir.h  FZZOFDTemplateDir.cpp  FZZOFDTemplateDir.h
ofdpdfsigner/ofdpdfsigner/ofd/draw/: FZZOFDDrawContext.cpp  FZZOFDDrawContext.h
ofdpdfsigner/ofdpdfsigner/ofd/encrypt/: FZZOFDUserCertEncryptor.cpp  (+4 more)
ofdpdfsigner/ofdpdfsigner/office/: FZZOfficeObject.cpp  FZZOfficeObject.h  FZZXMLElementObject.cpp  FZZXMLElementObject.h
ofdpdfsigner/ofdpdfsigner/pdfsign/: FZZPDF.cpp  FZZPDF.h  FZZPDFCreator.cpp  FZZPDFCreator.h  FZZPDFSigner.cpp  FZZPDFSigner.h  FZZPkcs7_GM.cpp  FZZPkcs7_GM.h
ofdpdfsigner/ofdpdfsigner/rapidjson/: document.h  fwd.h  prettywriter.h  reader.h  schema.h  writer.h
webext/: CMakeLists.txt  CMakeLists.txt.user.2ddf932  CMakeLists.txt.user.b8157db  CMakeLists.txt.user_win_vm  RestfulServer.cpp  RestfulServer.h  Util.cpp  Util.h  fontaddthread.cpp  fontaddthread.h  main.cpp  mongoose.cpp  mongoose.h  qtservice_win.cpp  service.bat
webext/mac/: readme.txt
webext/webapp/: seal.sel  sealuser.cer  sealuserpirkey.key  showdoc.html  test_swxa.html
webext/webapp/js/: docview.js
webext/windos/: readme.txt
演示/HarmonyOS/: 说明.txt
演示/android/: 说明.txt
演示/ios/: 说明.txt
演示/pc端/: 说明.txt
(+1280 files in other folders)
